--- a/wdia.html
+++ b/wdia.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
-    <p>Kobe Van westerop, I hope to complete the course and move into getting a job.</p>
+    <p>Kobe Van westerop, I have taken similar classes in the past but most have not stuck with me
+        I Hope this will be the one.</p>
 
 </html>
